; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_dump.c_hex_dump_internal.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_dump.c_hex_dump_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"%08x \00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c" %02x\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"   \00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"%c\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32, i32*, i32)* @hex_dump_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hex_dump_internal(i8* %0, i32* %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %12, align 4
  br label %15

15:                                               ; preds = %79, %5
  %16 = load i32, i32* %12, align 4
  %17 = load i32, i32* %10, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %82

19:                                               ; preds = %15
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* %12, align 4
  %22 = sub nsw i32 %20, %21
  store i32 %22, i32* %11, align 4
  %23 = load i32, i32* %11, align 4
  %24 = icmp sgt i32 %23, 16
  br i1 %24, label %25, label %26

25:                                               ; preds = %19
  store i32 16, i32* %11, align 4
  br label %26

26:                                               ; preds = %25, %19
  %27 = load i32, i32* %12, align 4
  %28 = call i32 (i8*, ...) @HEXDUMP_PRINT(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %27)
  store i32 0, i32* %13, align 4
  br label %29

29:                                               ; preds = %48, %26
  %30 = load i32, i32* %13, align 4
  %31 = icmp slt i32 %30, 16
  br i1 %31, label %32, label %51

32:                                               ; preds = %29
  %33 = load i32, i32* %13, align 4
  %34 = load i32, i32* %11, align 4
  %35 = icmp slt i32 %33, %34
  br i1 %35, label %36, label %45

36:                                               ; preds = %32
  %37 = load i32*, i32** %9, align 8
  %38 = load i32, i32* %12, align 4
  %39 = load i32, i32* %13, align 4
  %40 = add nsw i32 %38, %39
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i32, i32* %37, i64 %41
  %43 = load i32, i32* %42, align 4
  %44 = call i32 (i8*, ...) @HEXDUMP_PRINT(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %43)
  br label %47

45:                                               ; preds = %32
  %46 = call i32 (i8*, ...) @HEXDUMP_PRINT(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  br label %47

47:                                               ; preds = %45, %36
  br label %48

48:                                               ; preds = %47
  %49 = load i32, i32* %13, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %13, align 4
  br label %29

51:                                               ; preds = %29
  %52 = call i32 (i8*, ...) @HEXDUMP_PRINT(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %13, align 4
  br label %53

53:                                               ; preds = %74, %51
  %54 = load i32, i32* %13, align 4
  %55 = load i32, i32* %11, align 4
  %56 = icmp slt i32 %54, %55
  br i1 %56, label %57, label %77

57:                                               ; preds = %53
  %58 = load i32*, i32** %9, align 8
  %59 = load i32, i32* %12, align 4
  %60 = load i32, i32* %13, align 4
  %61 = add nsw i32 %59, %60
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i32, i32* %58, i64 %62
  %64 = load i32, i32* %63, align 4
  store i32 %64, i32* %14, align 4
  %65 = load i32, i32* %14, align 4
  %66 = icmp slt i32 %65, 32
  br i1 %66, label %70, label %67

67:                                               ; preds = %57
  %68 = load i32, i32* %14, align 4
  %69 = icmp sgt i32 %68, 126
  br i1 %69, label %70, label %71

70:                                               ; preds = %67, %57
  store i32 46, i32* %14, align 4
  br label %71

71:                                               ; preds = %70, %67
  %72 = load i32, i32* %14, align 4
  %73 = call i32 (i8*, ...) @HEXDUMP_PRINT(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i32 %72)
  br label %74

74:                                               ; preds = %71
  %75 = load i32, i32* %13, align 4
  %76 = add nsw i32 %75, 1
  store i32 %76, i32* %13, align 4
  br label %53

77:                                               ; preds = %53
  %78 = call i32 (i8*, ...) @HEXDUMP_PRINT(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0))
  br label %79

79:                                               ; preds = %77
  %80 = load i32, i32* %12, align 4
  %81 = add nsw i32 %80, 16
  store i32 %81, i32* %12, align 4
  br label %15

82:                                               ; preds = %15
  ret void
}

declare dso_local i32 @HEXDUMP_PRINT(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
